# post-machine

./: .env.example  .gitignore  .mise.toml  2026-04-27-ai-engineering-stack.md  2026-04-27-claude-code-shift.md  2026-04-27-cloud-run-advantages.md  2026-04-27-openai-models-2026.md  2026-04-27-serverless-aws-lambda.md  2026-04-27-typescript-ai-stack.md  2026-04-28-agent-frameworks-2026.md  2026-04-28-mcp-protocol-2026.md  2026-04-29-agentic-ai-2026-tipping-point.md  2026-04-29-ai-engineering-in-2026-the-reality-check.md  2026-04-29-ai-engineering-shifts-to-execution.md  2026-04-29-cloud-run-jobs-batch-processing.md  2026-04-29-data-sovereignty-and-llms-why-open-weight-models-are-the-sec.md  2026-04-29-gcp-cost-optimization-moving-beyond-general-scaling-rules.md  2026-04-29-gemini-enterprise-platform.md  2026-04-29-kubernetes-v136-and-the-shift-to-multi-cloud-resilience.md  2026-04-29-strategic-cost-optimization-in-gcp-compute.md  2026-04-30-ai-security-guardrails.md  2026-04-30-claude-code-mcp-servers.md  2026-04-30-cloud-run-cost-calculation.md  2026-04-30-on-premise-llm-deployment-requires-infrastructure-first-not-.md  2026-04-30-python-ai-agents-fastapi.md  2026-04-30-rag-evaluation-metrics.md  2026-04-30-typescript-rsc-ai-2026.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  notify_telegram.py  pyproject.toml
agent/: __init__.py  api.py  config.py  graph.py  hooks.py  llm.py  main.py  state.py
k8s/: 00-namespace.yaml  01-volumes.yaml  02-secrets.yaml  03-api.yaml  04-ui.yaml  langfuse-values.yaml
tests/: test_config.py  (+4 more)
(+17 files in other folders)
