[project]
name = "linkedin-post-agent"
version = "0.1.0"
description = "LinkedIn post generation agent — LangGraph + NVIDIA NIM (GLM-4.7)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.74",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.2",
    "ddgs>=9.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langfuse>=2.0.0",
]

[project.scripts]
post-agent = "agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # do not perform function calls in default arguments (typer pattern)
    "UP007",  # X | Y union syntax — keep Optional for clarity in TypedDicts
]

[tool.ruff.lint.isort]
known-first-party = ["agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
